fixed visible of button Close in modal window

--- a/src/components/Modal/_Modal.scss
+++ b/src/components/Modal/_Modal.scss
@@ -10,9 +10,8 @@
   display: none;
   justify-content: top;
   align-items: start;
-  z-index: 2000;
-  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+  overflow: visible;
 }
 
 .modal-feedback {
@@ -32,6 +31,8 @@
   display: flex;
   flex-direction: column;
   gap: $gap-xl;
+  // position: absolute;
+  z-index: 2500;
 }
 
 .form__inputs {
@@ -46,7 +47,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  z-index: 1;
+  // z-index: 2001;
 }
 
 .modal__close img {
